--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,6 @@
     <string-array name="games">
         <item>Battlefield 1</item>
         <item>DOOM</item>
-        <item>Fifa 17</item>
+        <item>Fallout</item>
     </string-array>
 </resources>
