--- a/app/src/main/res/layout/game_show.xml
+++ b/app/src/main/res/layout/game_show.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    >
 
     <ImageView
-        android:contentDescription="row"
-        android:id="@+id/icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-    </ImageView>
+        android:id="@+id/photo"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        tools:background="#AAA"
+        />
 
     <TextView
-        android:id="@+id/label"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="10dp"
-        android:text="text"
-        android:textSize="26sp" >
-    </TextView>
+        android:text="nom"
 
-</LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/photo"
+        android:layout_alignTop="@+id/photo"
+        android:textStyle="bold"
+        android:id="@+id/nom"
+        />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:layout_alignLeft="@+id/nom"
+        android:layout_below="@+id/nom"
+        tools:text="Description du produit"
+        />
+
+    <TextView
+        android:id="@+id/emplacement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Emplacement du produit"
+        android:layout_alignBottom="@+id/photo"
+        android:layout_alignLeft="@+id/description"
+        android:layout_alignStart="@+id/description" />
+
+</RelativeLayout>
