--- a/app/src/main/res/menu/activity_etagere_drawer.xml
+++ b/app/src/main/res/menu/activity_etagere_drawer.xml
@@ -7,9 +7,9 @@
             android:icon="@drawable/space_invader"
             android:title="@string/menu_ic1" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_account_circle"
+            android:title="@string/menu_ic2" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
