--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -56,7 +56,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="@string/button_co_val" />
+            android:text="@string/button_co_val"
+            android:onClick="Connexion" />
 
 
     </LinearLayout>
