--- a/app/src/main/res/menu/etagere.xml
+++ b/app/src/main/res/menu/etagere.xml
@@ -2,8 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_delete"
+        android:icon="@android:drawable/ic_menu_delete"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/navigation_drawer_open"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_modify"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:orderInCategory="100"
+        android:title="@string/menu_ic1"
+        app:showAsAction="always"/>
+
 </menu>
