--- a/app/src/main/res/layout/activity_desc_game.xml
+++ b/app/src/main/res/layout/activity_desc_game.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.durpoix.quentin.retrocollection.desc_game">
+    tools:context=".descGame">
 
     <ImageView
         android:layout_width="180dp"
